feat(clients): add advanced placement editor
